--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -77,8 +77,7 @@
 }
 
 .each-post {
-  border: 1px solid black;
-  border-radius: 20px;
+  border: 1px solid #A8A8A8;
   margin-right: 13%;
   margin-left: -35%;
   height: 120px;
@@ -116,7 +115,9 @@
 }
 
 .comment {
-    margin-left: 27%;
+    border-bottom: 1px solid #A8A8A8;
+    padding-bottom: 2%;
+    
 }
 
 .comment-input {
@@ -124,7 +125,7 @@
 }
 
 .whole-each-post {
-    margin-bottom: 8%;
+    margin-bottom: 27%;
 }
 
 .post-content {
@@ -145,17 +146,21 @@
 
 .comment-textarea {
   float: left;
-  width: 50%;
-  border-radius: 5px;
+  width: 92%;
+  border: none;
+  background-color: #FDEBB9;
+  resize: none;
 }
 
 .CommentDisplay {
-    border: 1px solid;
-    border-radius: 25px;
-    overflow-y: scroll;
-    height: 113px;
+  overflow-y: scroll;
+  height: 98px;
+  width: 955px;
+  margin-top: 1%;
+  
 }
 
-::-webkit-scrollbar{
-    width: 12px;
+.comment-form{
+    background-color: #FDEBB9;
+    padding: 1%;
 }
