--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
@@ -54,17 +54,33 @@
                 {
                     <input type="hidden" name="hidden-othersUserName" value="@Model.userWithId.UserName" />
                     <input type="hidden" name="hidden-follow-unfollow" value="unfollow" />
-                    <a href="OthersNameCard"><input type="submit" value="Unfollow" /></a>
+                    <a href="OthersNameCard"><input type="submit" value="" class="unfollow-others" /></a>
                 }
                 else
                 {
                     <input type="hidden" name="hidden-othersUserName" value="@Model.userWithId.UserName" />
                     <input type="hidden" name="hidden-follow-unfollow" value="follow" />
-                    <a href="OthersNameCard"><input type="submit" value="Follow" /></a>
+                    <a href="OthersNameCard"><input type="submit" value="" class="follow-others" /></a>
                 }
-
-
             }
+            
+            @using (Html.BeginForm("OthersNameCard", "NameCards", FormMethod.Post))
+            {
+                if (SozialWebApplication.Services.UserService.Instance.IsSingleMatch(User.Identity.Name, Model.userWithId.UserName))
+                {
+                    <input type="hidden" name="hidden-othersUserName" value="@Model.userWithId.UserName" />
+                    <input type="hidden" name="hidden-match-unmatch" value="unmatch" />
+                    <a href="OthersNameCard"><input type="submit" value="" class="unmatch-others" /></a>
+                }
+                
+                else
+                {
+                    <input type="hidden" name="hidden-othersUserName" value="@Model.userWithId.UserName" />
+                    <input type="hidden" name="hidden-match-unmatch" value="match" />
+                    <a href="OthersNameCard"><input type="submit" value="" class="match-others" /></a>
+                }
+            }
+
 
         </div>
     </div>
