--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -1,9 +1,10 @@
 ﻿.newsfeed {
-  margin-top: 6%;
-  margin-left: 32%;
+    margin-top: 6%;
+  margin-left: 10%;
   border: 1px solid black;
-  margin-right: 29%;
-  border-radius:25px;
+  margin-right: 10%;
+  /* border-radius: 25px; */
+  height: 167px;
 
 }
 
@@ -20,39 +21,52 @@
     font-weight: bold;
 }
 
-.post-img {
+.post-logo-settings {
   width: 460px;
-  margin-left:-2%;
+  margin-left: 363px;
 }
 
 .input-text {
     background-image: url('/Myndir/TextLogo.png');
+    background-size: 100%;
+    width: 15%;
+    height: 50px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    border: none;
+    margin-left: -228px;
 }
 
 .input-img {
-    background-image: url('/Myndir/Mynd.png');
-}
-
-.input-youtube {
-    background-image: url('/Myndir/Video.png');
-}
-
-.input-text,
-.input-img,
-.input-youtube {
+  background-image: url('/Myndir/Mynd.png');
   background-size: 100%;
   width: 15%;
   height: 50px;
   background-repeat: no-repeat;
-  margin-left: 61px;
+  margin-top: 2%;
   cursor: pointer;
   border: none;
+  margin-left: 235px;
 }
+
+.input-youtube {
+  background-image: url('/Myndir/Video.png');
+  background-size: 100%;
+  width: 15%;
+  height: 50px;
+  background-repeat: no-repeat;
+  margin-top: -10%;
+  cursor: pointer;
+  border: none;
+  margin-left: 239px;
+}
+
+
 
 .post-input {
   border: none;
-  width: 414px;
-  height: 50px;
+  width: 221px;
+  height: 102px;
   font-size: 16px;
   font-weight: bold;
   margin-left: 5%;
@@ -180,4 +194,11 @@
 .comment-post-name{
     margin-left: 2%;
     font-weight: bold;
+}
+.photo-input{
+    margin-left: 136px;
+}
+
+.video-input{
+    margin-left: 165px;
 }
