--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -68,7 +68,6 @@
   width: 221px;
   height: 102px;
   font-size: 16px;
-  font-weight: bold;
   margin-left: 5%;
   text-align: center;
 }
@@ -94,7 +93,7 @@
   border: 1px solid #A8A8A8;
   margin-right: 13%;
   margin-left: -35%;
-  height: 120px;
+  padding-top: 2%;
 }
 
 .like-img {
@@ -197,8 +196,24 @@
 }
 .photo-input{
     margin-left: 136px;
+    border: none;
+    height: 103px;
 }
 
 .video-input{
     margin-left: 165px;
+    border: none;
+    height: 103px;
+}
+
+.post-size-settings-photo{
+    text-align: center;
+}
+
+.post-size-settings-photo img{
+    width: 200px;
+}
+
+.post-size-settings-video{
+    text-align: center;
 }
