--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -71,7 +71,7 @@
                             <input type="button" class="input-youtube" />
                         </div>
                         <div class="post-input-settings">
-                            <input type="text" name="text-input" id="post-input" class="post-input" placeholder="Express yourself..." />
+                            <input type="text" name="post-input" id="post-input" class="post-input" placeholder="Express yourself..." />
                             <input type="text" name="photo-input" id="photo-input" class="photo-input" placeholder="Copy photo url here..." />
                             <input type="text" name="video-input" id="video-input" class="video-input" placeholder="Copy YouTube video url here..." />
                         </div>
@@ -89,19 +89,25 @@
             
                         <div class="each-post">
                             <div class="post-content">
-                                @if(post.PostType == SozialWebApplication.Models.PostType.Text)
+                                @if (post.PostType == SozialWebApplication.Models.PostType.Text)
                                 {
-                                   <p>@post.Body</p>
+                                    <div class="post-size-settings-text">
+                                        <p>@post.Body</p>
+                                    </div>
                                 }
                                 else if (post.PostType == SozialWebApplication.Models.PostType.Photo)
                                 {
-                                    <img src="@post.Body" alt="Photo from @post.UserName" />
+                                    <div class="post-size-settings-photo">
+                                        <img src="@post.Body" alt="Photo from @post.UserName" />
+                                    </div>
                                 }
                                 else if (post.PostType == SozialWebApplication.Models.PostType.Video)
                                 {
                                     string source ="https://www.youtube.com/embed/" + post.Body;
-                                    <p>Source: @source</p> 
-                                     <iframe width="560" height="315" src="@source" frameborder="0"></iframe>
+                                    <div class="post-size-settings-video">
+                                        <p>Source: @source</p> 
+                                         <iframe src="@source" frameborder="0"></iframe>
+                                    </div>
                                 }
                                 
                             </div>
