--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -8,7 +8,7 @@
     <br />
 
     <div class="namecard-button">
-        <a href="/Home/NewsfeedGroups/111">
+        <a href="/Home/NewsfeedGroups/1">
             <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
         </a>
 
