--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -71,7 +71,7 @@
                             <input type="button" class="input-youtube" />
                         </div>
                         <div class="post-input-settings">
-                            <input type="text" name="post-input" id="post-input" class="post-input" placeholder="Express yourself..." />
+                            <input type="text" name="text-input" id="post-input" class="post-input" placeholder="Express yourself..." />
                             <input type="text" name="photo-input" id="photo-input" class="photo-input" placeholder="Copy photo url here..." />
                             <input type="text" name="video-input" id="video-input" class="video-input" placeholder="Copy YouTube video url here..." />
                         </div>
