--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -202,3 +202,7 @@ margin-left: 67%;
     font-weight: bold;
     background-image: url('/Myndir/takkar.jpg');
 }
+
+::-webkit-scrollbar{
+    display: block;
+}
