--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="post" class="post-submit" />
+                <input type="submit" value="Post" class="post-submit" />
             }
             <!--Display recent posts-->
             <div class="all-posts">
