--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
@@ -10,9 +10,13 @@
     border-radius: 25px;
     height: 100px;
 }
+.namecard-button{
+    text-align: center;
+}
 .name-logo{
     height: 80px;
     margin: 1%;
+    margin-left: -1097px
 }
 
 h3{
@@ -32,7 +36,7 @@ h3{
     font-size: 50px;
     color: black;
     font-weight: bold;
-    margin-left: 32%;
+    margin-left: 414px;
     position:absolute;
     margin-top: 2%;
 }
@@ -55,7 +59,7 @@ iframe{
     background-color: white;
     cursor: pointer;
     position: absolute;
-    margin-left: 89%;
+    margin-left: 527px;
     margin-top: -8%;
 }
 
