--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -71,6 +71,7 @@
                             <input type="button" class="input-youtube" />
                         </div>
                         <div class="post-input-settings">
+                            <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
                             <input type="text" name="text-input" id="post-input" class="post-input" placeholder="Express yourself..." />
                             <input type="text" name="photo-input" id="photo-input" class="photo-input" placeholder="Copy photo url here..." />
                             <input type="text" name="video-input" id="video-input" class="video-input" placeholder="Copy YouTube video url here..." />
@@ -154,6 +155,7 @@
                                                 <p>@comment.DateCreated</p>
                                             </div>
                                             <p class="post-comment">@comment.Body</p>
+                                            <p>@comment.Body</p>
 
 
                                         </div>
