--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -8,7 +8,7 @@
     <br />
     
     <div class="namecard-button">
-        <a href="NewsfeedGroups/1">
+        <a href="/Home/NewsfeedGroups/1">
             <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
         </a>
         
