--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -35,7 +35,7 @@
             <div class="add-and-search">
 
                 <!-- Adding -->
-                @using (Html.BeginForm("AddNewGroup", "Home", FormMethod.Post))
+                @using (Html.BeginForm("SearchGroups", "Home", FormMethod.Post))
                 {
                     <div class="adding-groups">
                         <input type="text" id="newgroup-name" name="newgroup-name" class="addnewgroup-box" placeholder="Group name..." />
